--- a/web1/pom.xml
+++ b/web1/pom.xml
@@ -42,6 +42,14 @@
             <artifactId>json-simple</artifactId>
             <version>1.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>12.2.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
