--- a/LibraryExam 12.10.21/pom.xml
+++ b/LibraryExam 12.10.21/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>12.2.0.1</version>
+        </dependency>
 
     </dependencies>
 
